tests/feature_tests/error_string.c
int main() {
  // error: empty character constant
  '';

  // error: multiple characters in character constant
  'ab';

  // error: multiple characters in character constant
  '/*';
}
